Students_files/kubernetes_files/result_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app-deploy
  labels:
    name: result-app-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      name: result-app-pod
  template:
    metadata:
      name: result-app-pod
      labels:
        name: result-app-pod
    spec:
      containers:
        - name: result-app
          resources:
          image: blgsyrc0560/phonebook-result:latest
          ports:
            - containerPort: 80
