Students_files/kubernetes_files/web_server_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-phonebook-deploy
  labels:
    app: web-phonebook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-phonebook
  template:
    metadata:
      labels:
        app: web-phonebook
    spec:
      containers:
      - name: web-phonebook-pod
        resources:
        image: blgsyrc0560/phonebook-webserver:latest
        ports:
        - containerPort: 80
