Students_files/kubernetes_files/mysql_service.yaml
apiVersion: v1
kind: Service   
metadata:
  name: webmysqlsvc
  labels:
    app: mysql
spec:
  type: ClusterIP  
  ports:
  - port: 3306 
    targetPort: 3306
  selector:
    app: mysql
