Students_files/kubernetes_files/web_server_service.yml
apiVersion: v1
kind: Service
metadata:
  name: webphonebooksvc
  labels:
    app: web-phonebook
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
  selector:
    app: web-phonebook
